# vex

./: .gitignore  LICENSE  README.md  dune-project  vex.opam
.github/workflows/: release.yml
docs/plans/: 2026-03-26-mini-ml-evaluator.md  2026-03-26-vex-design.md
dogfood/server/: dune  server.ml
dogfood/tests/: items.test.md  learn-demo.test.md  miniml-smoke.test.md  shikimori.test.md  smoke.test.md
dogfood/tests/petstore/: pets.test.md  store.test.md  users.test.md  vex.yaml
lib/: config.ml  dune  eval.ml  eval_types.ml  frontmatter.ml  learn.ml  markdown.ml  mini_lexer.ml  mini_parser.ml  report_human.ml  report_json.ml  runner.ml  shape.ml  types.ml  variables.ml
test/: dune  test_eval.ml
